Добавил цвет для кнопки

--- a/main.css
+++ b/main.css
@@ -1,8 +1,13 @@
 body {
-    background-color: aliceblue;
+    background-color: blue;
     margin: 0;
 }
 p {
     font-family: Courier New;
-    font-size: 12px;
+    font-size: 60px;
 }
+button {
+    background-color: chocolate;
+}
+
+
